# klug-media

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  README.md  alembic.ini  compose.unraid.yml  hello.py  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  collection.py  frontend.py  health.py  horrorfest.py  import_batches.py  imports.py  library.py  (+10 more)
db/: 001_schema.sql  002_views.sql
docker/: entrypoint.sh  klug-media.env.example
tests/: conftest.py  test_auth_api.py  test_backfill_episode_shows_script.py  test_collection_api.py  test_collection_imports_service.py  test_frontend.py  test_health.py  test_horrorfest_api.py  test_horrorfest_import_service.py  test_horrorfest_service.py  test_import_batch_errors_api.py  test_import_batch_errors_service.py  test_import_batches_api.py  test_import_batches_service.py  test_import_horrorfest_script.py  test_import_watch_events_script.py  test_imports_api.py  test_imports_service.py  test_library_api.py  test_media_enrichment_service.py  test_media_items_api.py  test_media_items_service.py  test_metadata_enrichment_api.py  test_models_metadata.py  test_playback_events_api.py  test_playback_events_service.py  test_playback_events_service_list.py  test_scrobble_activity_api.py  test_scrobble_activity_service.py  test_session_api.py  test_show_backfill_service.py  test_shows_api.py  test_shows_service.py  test_stats_api.py  test_users_api.py  test_users_service.py  test_watch_events_api.py  test_watch_events_service.py  test_webhooks_service.py
(+90 files in other folders)
